<resources>
    <string name="app_name">Drug Remainder</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_add_drug">AddDrugActivity</string>
    <string name="title_activity_new_drug">NewDrugActivity</string>
    <string name="title_activity_edit_new_drug">EditNewDrugActivity</string>

    <string name="start_date">Start date:</string>
    <string name="end_date">End date:</string>

    <string name="save_button">Save</string>
    <string name="drug_type">Drug type:</string>
    <string name="drug_name">Drug name:</string>
    <string name="drug_doses">Doses count:</string>
    <string name="doses">Doses:</string>
    <string name="drug_doses_per_day">Doses per day:</string>
    <string name="drug_break_hours">Doses every hour:</string>
    <string name="drug_every_hours">Next dose in (h):</string>
    <string name="drug_at_hours">Doses at hours:</string>

    <string name="date_format">yyyy-MM-dd</string>
    <string name="time_format">HH:mm</string>
    <string name="datetime_format">yyyy-MM-dd (HH:mm:ss)</string>

    <!-- TODO: remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today_drugs_menu">Today</string>
    <string name="drugs">Drugs</string>
    <string name="to_do">to do</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="backspace_exit_message">Press twice to exit!</string>
    <string name="ask_take_drug">Do you want to take %s ?</string>
    <string name="ask_take_drug_title">Take drug?</string>

    <string name="drug_tab">Drug</string>
    <string name="dose_tab">Doses</string>

    <string name="dialog_positive">OK</string>
    <string name="dialog_negative">Cancel</string>

    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_remove_title">Remove</string>
    <string name="dialog_remove_message">Are you sure to remove this?</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="reset_time">Reset Time:</string>
    <string name="reset_now">Reset now!</string>
    <string name="reset_now_ask_title">Reset now?</string>
    <string name="reset_now_ask">Do you want to reset taken drugs now?</string>
    <string name="call_next_drugs_alarm">Call Next Drugs Alarm</string>
    <string name="save_history">Save History</string>
    <string name="save_config">Save Config</string>
    <string name="load_config">Load Config</string>

    <string name="send_email">Send email..</string>
    <string name="save_logs">Save logs to file</string>
    <string name="logs">Logs</string>
    <string name="test_next_alarm_notification">Test next alarm notification</string>

</resources>
