<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_today_drugs"
            android:icon="@drawable/ic_menu_add_alert"
            android:title="@string/today_drugs_menu" />
        <item
            android:id="@+id/nav_drugs"
            android:icon="@drawable/ic_menu_sort"
            android:title="@string/drugs" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
    </group>

</menu>
