<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="pl.com.mmotak.lekremainder.activities.NewDrugActivity">

    <data>

        <variable
            name="drugViewModel"
            type="pl.com.mmotak.lekremainder.viewModels.NewDrugViewModel"/>

        <import type="pl.com.mmotak.lekremainder.bindings.DialogManager"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <!-- Drug Name -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/drug_name"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@={drugViewModel.name}"/>

                <!-- Drug Type -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/drug_type"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@={drugViewModel.type}"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="3"
                        android:checked="@={drugViewModel.startDateEnable}"
                        android:onClick="@{drugViewModel.startDateCheckClick}"
                        android:text="@string/start_date"
                        android:textColor="@{drugViewModel.startDateEnable ? @color/primary_text : @color/secondary_text}"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_weight="6"
                        android:gravity="center_vertical"
                        android:onClick="@{drugViewModel.startDateClick}"
                        android:text="@{drugViewModel.startDate}"
                        android:textColor="@{drugViewModel.startDateEnable ? @color/primary_text : @color/secondary_text}"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="center_vertical"
                        app:errorMessage="@{drugViewModel.errorMsg}"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="3"
                        android:checked="@={drugViewModel.endDateEnable}"
                        android:onClick="@{drugViewModel.endDateCheckClick}"
                        android:text="@string/end_date"
                        android:textColor="@{drugViewModel.endDateEnable ? @color/primary_text : @color/secondary_text}"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_weight="6"
                        android:gravity="center_vertical"
                        android:onClick="@{drugViewModel.endDateClick}"
                        android:text="@{drugViewModel.endDate}"
                        android:textColor="@{drugViewModel.endDateEnable ? @color/primary_text : @color/secondary_text}"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="center_vertical"
                        app:errorMessage="@{drugViewModel.errorMsg}"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:text="@string/drug_doses"/>

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:inputType="numberSigned"
                        android:maxLength="3"
                        android:text="@={drugViewModel.doses}"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:text="@string/drug_hours"/>

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:maxLength="3"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:inputType="numberSigned"
                        android:text="@={drugViewModel.dosesEveryH}"/>
                </LinearLayout>


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{drugViewModel.enableButton}"
                    android:onClick="@{drugViewModel.onSaveClick}"
                    android:text="@string/save_button"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>

